--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/listing";
 @import "blocks/cards";
 @import "blocks/slick";
-@import "blocks/carousel/owl.carousel";
+@import "blocks/banner";
+@import "blocks/benefit";
 
 
