--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -39,6 +39,7 @@ $color-13: #401aff;
 $bgd-default: $color-10;
 $bgd-1: #FAFAFA;
 $bgd-2: #F1F1F1;
+$bgd-3: #f4f4f4;
 
 // header
 $nav-color: $color;
@@ -50,3 +51,4 @@ $link-color: $color;
 
 $radius: 1rem;
 $grid-gutter-width-m : 20px;
+$button-height: 56px;
