--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -6,6 +6,10 @@ block vars
 
 
 block container
+  .cmp-wrapper
+    include components/banner
+  .cmp-wrapper
+    include components/benefit
   .cmp-wrapper.has-bgd.bgd-1
     include components/cards/card-3
     
