--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -10,6 +10,10 @@ block container
     include components/banner
   .cmp-wrapper
     include components/benefit
+  
+  .cmp-wrapper
+    include components/plan
+
   .cmp-wrapper.has-bgd.bgd-1
     include components/cards/card-3
     
