--- a/app/views/style-guide.pug
+++ b/app/views/style-guide.pug
@@ -16,6 +16,7 @@ block container
           h2.title-main-1 Main title title-main-1
           h2.title-main-2 Main title title-main-2
           h2.title-main-3 Main title title-main-3
+          h2.title-main-4 Main title title-main-4
         .col-md-3
           p this is normal text
           p.text-default this is text-default
