--- a/app/styles/blocks/header.scss
+++ b/app/styles/blocks/header.scss
@@ -5,6 +5,7 @@ $logo: 113px;
   right: 0;
   top: 0;
   z-index: 11;
+  background: white;
   transition: all 0.3s;
   @include media-breakpoint-down(md){
     height: 4.5rem;
