--- a/app/styles/utilities/buttons.scss
+++ b/app/styles/utilities/buttons.scss
@@ -10,6 +10,7 @@ button:focus {
 .btn {
   font-size: $font-medium;
   font-weight: bold;
+  white-space: nowrap;
   line-height: $button-height;
   display: inline-block;
   padding: 0 30px;
