--- a/app/styles/utilities/title.scss
+++ b/app/styles/utilities/title.scss
@@ -25,6 +25,12 @@
     font-size: 3rem;
   }
 }
+.title-main-4 {
+  font-size: 2.4rem;
+  @include media-breakpoint-down(sm){
+    font-size: 2rem;
+  }
+}
 
 .text-default {
   font-size: $font-size-base;
@@ -56,16 +62,7 @@
 .text-2 {
   color: $color;
 }
-.sub-title {
-  font-size: $font-small;
-  padding-bottom: 5px;
-  position: relative; 
-  display: inline-block;
-  &:after {
-    content: '>';
-    margin-left: 5px;
-  }
-}
+
 .publish-time {
   @extend .text-smaller;
   @extend .text-1;
