--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -23,7 +23,7 @@ $font-smaller: 1.3rem;
 // Color
 $color: #383838;
 $color-1: rgba(0,0,0,0.6);
-$color: #383838;
+// $color: #383838;
 $color-3: rgba(0,0,0,0.2);
 $color-4: #00C0F2;
 $color-5: #ed028c;
@@ -41,6 +41,7 @@ $bgd-1: #FAFAFA;
 $bgd-2: #F1F1F1;
 $bgd-3: #f4f4f4;
 
+$body-color: $color;
 // header
 $nav-color: $color;
 $nav-hover-color: $color-5;
